--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.3.0",
     "datatables.net": "^1.13.4",
+    "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
     "ng-cdbangular": "^1.2.1",
